tests/machine/x/cpp/group_items_iteration.error
line 28: ../../../tests/machine/x/cpp/group_items_iteration.cpp:28:12: error: ‘total’ was not declared in this scope
   28 |   decltype(total) total;
      |            ^~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:28:12: error: ‘total’ was not declared in this scope
../../../tests/machine/x/cpp/group_items_iteration.cpp: In lambda function:
../../../tests/machine/x/cpp/group_items_iteration.cpp:65:34: error: ‘r’ was not declared in this scope
   65 |   std::vector<std::pair<decltype(r.tag), decltype(r)>> __items;
      |                                  ^
../../../tests/machine/x/cpp/group_items_iteration.cpp:65:42: error: template argument 1 is invalid
   65 |   std::vector<std::pair<decltype(r.tag), decltype(r)>> __items;
      |                                          ^~~~~~~~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:65:42: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_items_iteration.cpp:65:53: error: template argument 1 is invalid
   65 |   std::vector<std::pair<decltype(r.tag), decltype(r)>> __items;
      |                                                     ^~
../../../tests/machine/x/cpp/group_items_iteration.cpp:65:53: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_items_iteration.cpp:67:13: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   67 |     __items.push_back({r.tag, r});
      |             ^~~~~~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:67:26: error: request for member ‘tag’ in ‘r’, which is of non-class type ‘int’
   67 |     __items.push_back({r.tag, r});
      |                          ^~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:69:21: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
   69 |   std::sort(__items.begin(), __items.end(),
      |                     ^~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:69:38: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
   69 |   std::sort(__items.begin(), __items.end(),
      |                                      ^~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:71:26: error: template argument 1 is invalid
   71 |   std::vector<decltype(r)> __res;
      |                          ^
../../../tests/machine/x/cpp/group_items_iteration.cpp:71:26: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_items_iteration.cpp:72:18: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
   72 |   for (auto &p : __items)
      |                  ^~~~~~~
      |                  std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from ../../../tests/machine/x/cpp/group_items_iteration.cpp:2:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:72:18: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
   72 |   for (auto &p : __items)
      |                  ^~~~~~~
      |                  std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:73:11: error: request for member ‘push_back’ in ‘__res’, which is of non-class type ‘int’
   73 |     __res.push_back(p.second);
      |           ^~~~~~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp: In instantiation of ‘main()::<lambda(auto:3)> [with auto:3 = std::vector<int>]’:
../../../tests/machine/x/cpp/group_items_iteration.cpp:86:7:   required from here
../../../tests/machine/x/cpp/group_items_iteration.cpp:84:18: error: no matching function for call to ‘std::vector<int>::push_back(__struct3)’
   84 |       v.push_back(__struct3{g.key, total});
      |       ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from ../../../tests/machine/x/cpp/group_items_iteration.cpp:4:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = int; _Alloc = std::allocator<int>; value_type = int]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘__struct3’ to ‘const std::vector<int>::value_type&’ {aka ‘const int&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = int; _Alloc = std::allocator<int>; value_type = int]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘__struct3’ to ‘std::vector<int>::value_type&&’ {aka ‘int&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
../../../tests/machine/x/cpp/group_items_iteration.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/group_items_iteration.cpp:90:35: error: request for member ‘size’ in ‘__tmp1’, which is of non-class type ‘int’
   90 |     for (size_t i = 0; i < __tmp1.size(); ++i) {
      |                                   ^~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:93:44: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
   93 |       std::cout << std::boolalpha << __tmp1[i];
      |                                            ^

 27 |   decltype(std::declval<__struct2>().key) tag;
 28 |   decltype(total) total;
 29 | };
